# tremulous

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING.md  Environment.cmake  README.md  libjpeg-turbo-1.5.1-4.fc27.src.rpm  meson.build  meson_options.txt  setup.sh
cmake/: AcquireDependency.cmake  BuildQVM.cmake  TremulousUtils.cmake  Utilities.cmake
data/: CMakeLists.txt  com.grangerhub.Tremulous.desktop  meson.build
data/core/: meson.build
data/game/: Assets.cmake  CMakeLists.txt  pack_data.py  pack_vms.py
docs/: CMakeLists.txt  DevelopmentOnLinux.md  DevelopmentOnMacOS.md  DevelopmentOnWindows.md  RunningServers.md  meson.build  server.sh.template
po/: meson.build
src/asm/: CMakeLists.txt  Files.cmake  meson.build
src/cgame/: CMakeLists.txt  meson.build
src/client/: CMakeLists.txt  meson.build  tremulous.c.in
src/game/: CMakeLists.txt  Files.cmake  bg_local.h  bg_pmove.c  bg_slidemove.c  g_combat.c  g_local.h  g_main.c  meson.build  tremulous.h
src/null/: Files.cmake  meson.build
src/qcommon/: Files.cmake  files.cpp  files.h  meson.build
src/renderercommon/: CMakeLists.txt  meson.build
src/renderergl1/: CMakeLists.txt  Files.cmake  meson.build
src/renderergl2/: CMakeLists.txt  meson.build  tr_backend.cpp
src/renderergl2/glsl/: meson.build  pack_glsl.py
src/script/: CMakeLists.txt  meson.build
src/sdl/: CMakeLists.txt  Files.cmake  meson.build
src/server/: CMakeLists.txt  Files.cmake  meson.build
src/sys/: CMakeLists.txt  Files.cmake  meson.build  sys_main.cpp
src/tools/: CMakeLists.txt
src/tools/asm/: CMakeLists.txt  meson.build
src/tools/lcc/: CMakeLists.txt  meson.build
src/tools/lcc/src/: meson.build
src/ui/: CMakeLists.txt  Files.cmake  meson.build  ui_shared.h
tremulous/: CMakeLists.txt
tremulous-game-base/: CMakeLists.txt
tremulous-game-gpp/: CMakeLists.txt
tremulous-game-gpp/data/: Assets.cmake  CMakeLists.txt
tremulous-game-gpp/src/: CMakeLists.txt
tremulous-game-gpp/src/cgame/: cg_local.h
tremulous-game-gpp/src/game/: g_local.h
tremulous-game-gpp/src/ui/: ui_local.h  ui_shared.h
tremulous/cmake/: Options.cmake  Utilities.cmake
tremulous/cmake/Modules/: FindCURL.cmake  FindJPEG.cmake  FindLibZIP.cmake  FindLua.cmake  FindOgg.cmake  FindOpenAL.cmake  FindSol.cmake  FindVorbis.cmake  FindZIPTool.cmake
tremulous/cmake/Tremulous/: AddTremulousGame.cmake  AddTremulousPk3.cmake  CMakeLists.txt  TremulousConfig.cmake.in  TremulousConfigVersion.cmake.in
tremulous/data/: CMakeLists.txt
tremulous/docs/: CMakeLists.txt  Index.md
tremulous/docs/CMake/: Package.md  Tutorial.md
tremulous/docs/Servers/: RunningServers.md  server.sh.template
tremulous/src/asm/: Sources.cmake
tremulous/src/cgame/: CMakeLists.txt  cg_syscalls.c
tremulous/src/client/: CMakeLists.txt  cl_updates.cpp
tremulous/src/game/: CMakeLists.txt  g_syscalls.c
tremulous/src/null/: Sources.cmake
tremulous/src/qcommon/: CMakeLists.txt  Sources.cmake  files.cpp  files.h  qfiles.h
tremulous/src/qvmtools/: CMakeLists.txt
tremulous/src/qvmtools/lcc/cpp/: include.c
tremulous/src/renderercommon/: CMakeLists.txt
tremulous/src/renderergl1/: CMakeLists.txt
tremulous/src/renderergl2/: CMakeLists.txt  PackGLSL.cmake
tremulous/src/script/: CMakeLists.txt
tremulous/src/script/rapidjson/: document.cpp  rapidjson.cpp  schema.cpp  userdata.hpp  values.hpp
tremulous/src/sdl/: Sources.cmake
tremulous/src/server/: CMakeLists.txt  Sources.cmake
tremulous/src/sys/: Sources.cmake  sys_main.cpp
tremulous/src/ui/: CMakeLists.txt  ui_syscalls.c
