data_files = [
  'armour/bsuit.armour',
  'armour/helmet.armour',
  'armour/larmour.armour',
  'configs/buildables/acid_tube.cfg',
  'configs/buildables/arm.cfg',
  'configs/buildables/barricade.cfg',
  'configs/buildables/booster.cfg',
  'configs/buildables/dcc.cfg',
  'configs/buildables/eggpod.cfg',
  'configs/buildables/hive.cfg',
  'configs/buildables/hovel.cfg',
  'configs/buildables/medistat.cfg',
  'configs/buildables/mgturret.cfg',
  'configs/buildables/overmind.cfg',
  'configs/buildables/reactor.cfg',
  'configs/buildables/repeater.cfg',
  'configs/buildables/telenode.cfg',
  'configs/buildables/tesla.cfg',
  'configs/buildables/trapper.cfg',
  'configs/classes/builder.cfg',
  'configs/classes/builderupg.cfg',
  'configs/classes/human_base.cfg',
  'configs/classes/human_bsuit.cfg',
  'configs/classes/level0.cfg',
  'configs/classes/level1.cfg',
  'configs/classes/level1upg.cfg',
  'configs/classes/level2.cfg',
  'configs/classes/level2upg.cfg',
  'configs/classes/level3.cfg',
  'configs/classes/level3upg.cfg',
  'configs/classes/level4.cfg',
  'configs/classes/spectator.cfg',
  'models/buildables/acid_tube/animation.cfg',
  'models/buildables/barricade/animation.cfg',
  'models/buildables/medistat/animation.cfg',
  'models/buildables/mgturret/animation.cfg',
  'models/buildables/repeater/animation.cfg',
  'models/buildables/tesla/animation.cfg',
  'models/generic/sphere.md3',
  'models/generic/sphericalCone240.md3',
  'models/generic/sphericalCone64.md3',
  'models/players/human_base/locdamage.cfg',
  'models/players/human_bsuit/locdamage.cfg',
  'models/players/level1/animation.cfg',
  'models/weapons/abuild/weapon.cfg',
  'models/weapons/abuildupg/weapon.cfg',
  'models/weapons/grenade/weapon.cfg',
  'models/weapons/lcannon/weapon.cfg',
  'models/weapons/level0/weapon.cfg',
  'models/weapons/level1/weapon.cfg',
  'models/weapons/level1upg/weapon.cfg',
  'models/weapons/level2/weapon.cfg',
  'models/weapons/level2upg/weapon.cfg',
  'models/weapons/level3/weapon.cfg',
  'models/weapons/level3upg/weapon.cfg',
  'models/weapons/level4/weapon.cfg',
  'models/weapons/mdriver/weapon.cfg',
  'models/weapons/prifle/weapon.cfg',
  'models/weapons/psaw/weapon.cfg',
  'music/Tremulous Heartbeat.mid',
  'scripts/binary.shader',
  'scripts/core.shader',
  'scripts/crosshairs.shader',
  'scripts/mdriver.trail',
  'scripts/misc.particle',
  'scripts/ui.shader',
  'scripts/weapons.particle',
  'scripts/weapons.shader',
  'sound/buildables/barricade/sound.cfg',
  'ui/assets/alien/buildstat.cfg',
  'ui/assets/console1.tga',
  'ui/assets/console2.jpg',
  'ui/assets/human/buildstat.cfg',
  'ui/connect.menu',
  'ui/createfavorite.menu',
  'ui/createserver.menu',
  'ui/demo.menu',
  'ui/download.menu',
  'ui/drop.menu',
  'ui/error.menu',
  'ui/findplayer.menu',
  'ui/help.txt',
  'ui/hud.txt',
  'ui/ingame.menu',
  'ui/ingame.txt',
  'ui/ingame_game.menu',
  'ui/ingame_help.menu',
  'ui/ingame_leave.menu',
  'ui/ingame_options.menu',
  'ui/install_update.menu',
  'ui/joinserver.menu',
  'ui/loading.menu',
  'ui/main.menu',
  'ui/menu_bool.h',
  'ui/menudef.h',
  'ui/menus.txt',
  'ui/mod.menu',
  'ui/news.menu',
  'ui/options.menu',
  'ui/password.menu',
  'ui/quit.menu',
  'ui/quitcredit.menu',
  'ui/say.menu',
  'ui/serverinfo.menu',
  'ui/teamscore.menu',
  'ui/tremulous.txt',
  'ui/tremulous_alien_builder_hud.menu',
  'ui/tremulous_alien_common_hud.h',
  'ui/tremulous_alien_general_hud.menu',
  'ui/tremulous_alienbuild.menu',
  'ui/tremulous_alienclass.menu',
  'ui/tremulous_aliendialogs.menu',
  'ui/tremulous_alienupgrade.menu',
  'ui/tremulous_common_hud.h',
  'ui/tremulous_default_hud.menu',
  'ui/tremulous_dialogs.menu',
  'ui/tremulous_human_hud.menu',
  'ui/tremulous_humanarmoury.menu',
  'ui/tremulous_humanbuild.menu',
  'ui/tremulous_humandialogs.menu',
  'ui/tremulous_humanitem.menu',
  'ui/tremulous_spectator_hud.menu',
  'ui/tremulous_teamselect.menu',
  'ui/tremulous_voicecmd.menu'
]

pk3_suffix = game_pk3_name + '-' + game_version + '.pk3'
data_pk3_name = 'data-' + pk3_suffix
gpp_vms_pk3_name = 'gpp-vms-' + pk3_suffix
v11_vms_pk3_name = 'v11-vms-' + pk3_suffix

pack_data_py = find_program( 'pack_data.py' )
pack_vms_py = find_program( 'pack_vms.py' )

custom_target(
  'assets',
  output : data_pk3_name,
  depend_files : [ files( data_files ), files( 'pack_data.py' ) ],
  command : [
    pack_data_py,
    '--assets-dir', '@CURRENT_SOURCE_DIR@',
    '--data-files', data_files,
    '--data-pk3', '@OUTPUT0@',
  ],
  build_by_default: true,
  install: true,
  install_dir: game_assets_dir
)

custom_target(
  'vms',
  output : [
    gpp_vms_pk3_name,
    v11_vms_pk3_name
  ],
  depend_files : files( 'pack_vms.py' ),
  depends : [ game_qvm, cgame_qvm, ui_qvm, cgame_11_qvm, ui_11_qvm ],
  command : [
    pack_vms_py,
    '--game-qvm', game_qvm,
    '--cgame-qvm', cgame_qvm,
    '--ui-qvm', ui_qvm,
    '--cgame-11-qvm', cgame_11_qvm,
    '--ui-11-qvm', ui_11_qvm,
    '--gpp-vms-pk3', '@OUTPUT0@',
    '--v11-vms-pk3', '@OUTPUT1@'
  ],
  build_by_default: true,
  install: true,
  install_dir: game_assets_dir
)
