keycodes_h = files( 'keycodes.h' )

tremulous_exe = executable(
  'tremulous', 
  qcommon_src,
  qcommon_sys_src,
  sys_src,
  server_src,
  'cl_avi.cpp',
  'cl_cgame.cpp',
  'cl_cin.cpp',
  'cl_console.cpp',
  'cl_curl.cpp',
  'cl_input.cpp',
  'cl_keys.cpp',
  'cl_main.cpp',
  'cl_net_chan.cpp',
  'cl_parse.cpp',
  'cl_rest.cpp',
  'cl_scrn.cpp',
  'cl_ui.cpp',
  'cl_updates.cpp',
  'qal.cpp',
  'snd_adpcm.cpp',
  'snd_codec.cpp',
  'snd_codec_ogg.cpp',
  'snd_codec_opus.cpp',
  'snd_codec_wav.cpp',
  'snd_dma.cpp',
  'snd_main.cpp',
  'snd_mem.cpp',
  'snd_mix.cpp',
  'snd_openal.cpp',
  'snd_wavelet.cpp',
  sdl_client_src,
  c_args : tremulous_cflags,
  cpp_args : tremulous_cflags,
  link_args : [ '-export-dynamic' ],
  dependencies : [
    qcommon_deps,
    sys_deps,
    script_api_dep,
    sdl2_dep,
    libjpeg_dep,
    vorbisfile_dep,
    opusfile_dep,
    openal_dep,
    restclient_dep,
    rapidjson_dep,
    nettle_dep,
    semver_dep
  ],
  gui_app : true,
  install : true,
  install_dir : game_exe_dir
)
